# igri

./: Cargo.toml  README.md
igri/: Cargo.toml  README.md
igri/src/: inspect.rs  lib.rs  std_impls.rs  test.rs
igri/tests/: derive.rs
igri_demo/: Cargo.toml
igri_demo/src/: lib.rs  main.rs
igri_derive/: Cargo.toml
igri_derive/src/: inspect.rs  lib.rs
igri_derive/src/inspect/: args.rs  utils.rs
